@@ -1,2 +1,3 @@
 ASAP.as
 asap.swf
+doc
