@@ -25,6 +25,11 @@ package
 {
 	import flash.utils.ByteArray;
 
+	/** Another Slight Atari Player.
+	    It interprets music files created for 8-bit Atari computers,
+	    emulates the 6502 processor and the POKEY sound chip
+	    and generates audio samples.  ASAP performs no I/O operations
+	    - music data must be passed in byte arrays. */
 	public class ASAP
 	{
 		#define ACTIONSCRIPT
@@ -71,8 +76,13 @@ package
 		private const poly17_lookup : ByteArray = new ByteArray();
 		private const memory : ByteArray = new ByteArray();
 
+		/** ASAP version. */
 		public static const VERSION : String = "2.1.1";
 
+		/** Parses a string in the <code>"mm:ss.xxx"</code> format
+		    and returns the number of milliseconds represented by the string.
+		    @param s string representation of time
+		    @return number of milliseconds represented by the string */
 		public static function parseDuration(s : String) : int
 		{
 			if (s == null || s.length == 0)
@@ -83,27 +93,42 @@ package
 			return r;
 		}
 
+		/** Loads music data.
+		    @param filename determines file format
+		    @param module contents of the file */
 		public function load(filename : String, module : ByteArray) : void
 		{
 			if (!ASAP_Load(this, filename, module, module.length))
 				throw "ASAP load error";
 		}
 
+		/** Information about the loaded module. */
 		public function get moduleInfo() : ASAP_ModuleInfo
 		{
 			return this.module_info;
 		}
 
+		/** Prepares ASAP to play the specified song of the loaded module.
+		    @param song zero-based song index
+		    @param duration playback time in milliseconds,
+		    -1 means indefinitely */
 		public function playSong(song : int, duration : int) : void
 		{
 			ASAP_PlaySong(this, song, duration);
 		}
 
+		/** Mutes the selected POKEY channels.
+		    @param mask an 8-bit mask which selects POKEY channels to be muted */
 		public function mutePokeyChannels(mask : int) : void
 		{
 			ASAP_MutePokeyChannels(this, mask);
 		}
 
+		/** Fills the specified buffer with generated samples.
+		    @param buffer the destination buffer
+		    @param buffer_len buffer length in samples
+		    @return number of samples written in the buffer
+		    (less than <code>buffer_len</code> if reached the end of the song) */
 		public function generate(buffer : ByteArray, buffer_len : int) : int
 		{
 			return ASAP_Generate(this, buffer, buffer_len, 0);
